SONARRUBY-98 Fix easy toList on stream